--- a/Code-For-WPF/MainWindow.xaml
+++ b/Code-For-WPF/MainWindow.xaml
@@ -19,9 +19,10 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button Name="BtnStart" Content="Start" Grid.Row="0" Grid.Column="0" Margin="10"></Button>
-        <Button Name="BtnStop" Content="Stop" Grid.Row="0" Grid.Column="1" Margin="10"></Button>
+        <Button Name="BtnStart" Content="Start" Grid.Row="0" Grid.Column="0" Margin="10" Click="BtnStart_Click"></Button>
+        <Button Name="BtnStop" Content="Stop" Grid.Row="0" Grid.Column="1" Margin="10" Click="BtnStop_Click"></Button>
         <TextBox Name="TbLog" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="4" Margin="10"></TextBox>
-        <ProgressBar Name="ProcessBar" Grid.Row="3" Grid.ColumnSpan="4" Margin="10"></ProgressBar> 
+        <Label Name="LbProcess" Grid.Row="0" Grid.Column="2" Content="Processing 0 %" Margin="10" HorizontalAlignment="Center"></Label>
+        <ProgressBar Name="BarProcess" Grid.Row="3" Grid.ColumnSpan="4" Margin="10"></ProgressBar> 
     </Grid>
 </Window>
